# ricl_openpi

./: README.md  RICL_INTEGRATION.md  pyproject.toml  requirements.freeze.txt  test_libero_lerobot.sh  tmp.py
examples/libero/: main.py
scripts/: serve_policy_ricl.py
src/openpi/policies/: lerobot_retrieval_bridge.py  policy.py  policy_config.py
src/openpi/training/: data_loader.py
