[project]
name = "openpi"
version = "0.1.0"
description = "Physical Intelligence open source repo"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "augmax>=0.3.4",
    "dm-tree>=0.1.8",
    "einops>=0.8.0",
    "equinox>=0.11.8",
    "flatbuffers>=24.3.25",
    "flax==0.10.2",
    "fsspec[gcs]>=2024.6.0",
    "gym-aloha>=0.1.1",
    "imageio>=2.36.1",
    "jax==0.5.0", # CPU version (use jax[cuda12] for GPU)
    "jaxtyping==0.2.36",
    "lerobot",
    "ml-collections==1.0.0",
    "numpy>=1.26.4",
    "numpydantic>=1.6.6",
    "opencv-python>=4.10.0.84",
    "openpi-client",
    "orbax-checkpoint==0.11.1",
    "pillow>=11.0.0",
    "s3fs>=2024.9.0",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "torchvision>=0.15.0",
    "tqdm-loggable>=0.2",
    "typing-extensions>=4.12.2",
    "tyro>=0.9.5",
    "wandb>=0.19.1",
    "boto3>=1.35.7",
    "types-boto3[boto3,s3]>=1.35.7",
    "filelock>=3.16.1",
    "beartype>=0.19.0",
    "treescope>=0.1.7",
    "transformers>=4.56.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "accelerate>=0.20.0",
    "autofaiss>=2.0.0",
    "absl-py>=2.1.0",
    "aiobotocore>=2.16.0",
    "aiohappyeyeballs>=2.4.4",
    "aiohttp>=3.11.11",
    "aioitertools>=0.12.0",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.13.2",
    "appnope>=0.1.4",
    "asttokens>=3.0.0",
    "attrs>=24.3.0",
    "av>=15.1.0",
    "bddl>=3.6.0",
    "botocore>=1.35.81",
    "botocore-stubs>=1.35.86",
    "cachetools>=5.5.0",
    "certifi>=2024.12.14",
    "cfgv>=3.4.0",
    "charset-normalizer>=3.4.0",
    "chex>=0.1.88",
    "click>=8.1.8",
    "cloudpickle>=3.1.0",
    "cmake>=3.31.2",
    "comm>=0.2.2",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "datasets>=3.6.0",
    "debugpy>=1.8.11",
    "decorator>=5.1.1",
    "deepdiff>=8.1.1",
    "diffusers>=0.31.0",
    "dill>=0.3.8",
    "distlib>=0.3.9",
    "dm-control>=1.0.14",
    "dm-env>=1.6",
    "docstring-parser>=0.16",
    "draccus>=0.10.0",
    "easydict>=1.13",
    "egl-probe>=1.0.2",
    "embedding-reader>=1.8.1",
    "etils>=1.11.0",
    "executing>=2.1.0",
    "farama-notifications>=0.0.4",
    "fastjsonschema>=2.21.2",
    "fire>=0.6.0",
    "fonttools>=4.55.3",
    "frozenlist>=1.5.0",
    "future>=1.0.0",
    "gcsfs>=2024.9.0.post1",
    "gitdb>=4.0.11",
    "gitpython>=3.1.43",
    "glfw>=2.8.0",
    "google-api-core>=2.24.0",
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-core>=2.4.1",
    "google-cloud-storage>=2.19.0",
    "google-crc32c>=1.6.0",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.66.0",
    "grpcio>=1.76.0",
    "gymnasium>=0.29.1",
    "h5py>=3.15.1",
    "hf-egl-probe>=1.0.2",
    "hf-transfer>=0.1.8",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.35.3",
    "humanize>=4.11.0",
    "hydra-core>=0.11.3",
    "identify>=2.6.3",
    "idna>=3.10",
    "imageio-ffmpeg>=0.5.1",
    "importlib-metadata>=8.5.0",
    "importlib-resources>=6.4.5",
    "iniconfig>=2.0.0",
    "inquirerpy>=0.3.4",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "jaxlib>=0.5.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.5",
    "jmespath>=1.0.1",
    "joblib>=1.5.3",
    "jsonlines>=4.0.0",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "jupyterlab-widgets>=3.0.13",
    "jupytext>=1.18.1",
    "kiwisolver>=1.4.7",
    "labmaze>=1.0.6",
    "llvmlite>=0.46.0",
    "lxml>=5.3.0",
    "markdown>=3.10",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.0",
    "matplotlib-inline>=0.1.7",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "mergedeep>=1.3.4",
    "ml-dtypes>=0.4.1",
    "mpmath>=1.3.0",
    "msgpack>=1.1.0",
    "mujoco>=2.3.7",
    "multidict>=6.1.0",
    "multiprocess>=0.70.16",
    "mypy-extensions>=1.0.0",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "nodeenv>=1.9.1",
    "numba>=0.63.1",
    "nvidia-ml-py>=12.560.30",
    "oauthlib>=3.2.2",
    "omegaconf>=1.4.1",
    "opencv-python-headless>=4.11.0.86",
    "opt-einsum>=3.4.0",
    "optax>=0.2.4",
    "orderly-set>=5.2.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "pfzy>=0.3.4",
    "platformdirs>=4.3.6",
    "pluggy>=1.5.0",
    "pre-commit>=4.0.1",
    "prompt-toolkit>=3.0.48",
    "propcache>=0.2.1",
    "proto-plus>=1.25.0",
    "protobuf>=5.29.2",
    "psutil>=6.1.1",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyarrow>=22.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pydantic>=2.10.4",
    "pydantic-core>=2.27.2",
    "pygments>=2.18.0",
    "pynput>=1.8.1",
    "pynvml>=12.0.0",
    "pyobjc-core>=12.1",
    "pyobjc-framework-applicationservices>=12.1",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-coretext>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "pyopengl>=3.1.7",
    "pyparsing>=3.2.0",
    "pyserial>=3.5",
    "pytest>=8.3.4",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "pyyaml-include>=1.4.1",
    "pyzmq>=26.2.0",
    "referencing>=0.37.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rerun-sdk>=0.22.1",
    "rich>=13.9.4",
    "robomimic>=0.3.0",
    "robosuite>=1.4.1",
    "rpds-py>=0.30.0",
    "rsa>=4.9",
    "ruff>=0.8.6",
    "s3transfer>=0.10.4",
    "safetensors>=0.4.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.1",
    "sentry-sdk>=2.19.2",
    "setuptools>=75.6.0",
    "shtab>=1.7.1",
    "simplejson>=3.19.3",
    "six>=1.17.0",
    "smmap>=5.0.1",
    "stack-data>=0.6.3",
    "svgwrite>=1.4.3",
    "sympy>=1.13.1",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboardx>=2.6.4",
    "tensorstore>=0.1.71",
    "termcolor>=2.5.0",
    "thop>=0.1.1.post2209072238",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.22.2",
    "toml>=0.10.2",
    "toolz>=1.0.0",
    "torchcodec>=0.5",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "tree>=0.2.4",
    "typeguard>=4.4.1",
    "types-awscrt>=0.23.6",
    "types-boto3-s3>=1.35.81",
    "types-s3transfer>=0.10.4",
    "typing-inspect>=0.9.0",
    "tzdata>=2024.2",
    "urllib3>=2.3.0",
    "virtualenv>=20.28.0",
    "wcwidth>=0.2.13",
    "websockets>=14.1",
    "werkzeug>=3.1.5",
    "widgetsnbextension>=4.0.13",
    "wrapt>=1.17.0",
    "xxhash>=3.5.0",
    "yarl>=1.18.3",
    "zipp>=3.21.0",
    "rar-client",
    "libero"
]


[project.urls]
Repository = "https://github.com/Physical-Intelligence/openpi"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "pynvml>=12.0.0",
]


[tool.uv.sources]
openpi-client = { workspace = true }
rar-client = { path = "../../sdk", editable = true }
libero = { path = "third_party/libero", editable = true }

[tool.uv.workspace]
members = [
    "packages/*"
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["docker", "third_party"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "C4",
    "DTZ",
    "E4",
    "E7",
    "E9",
    "F",
    "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR1",
    "PLR5",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "UP",
    "W",
]
ignore = [
    "F722",   # Conflicts with array typing.
    "T201",   # We use print statements.
    "PD008",  # Lots of false positives.
    "ISC001", # Disabling to support ruff format.
]
unfixable = [
    "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["manual: should be run manually."]
testpaths = ["src", "scripts", "packages"]
